<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_bottom_margin"
        android:layout_marginBottom="@dimen/top_bottom_margin"
        android:layout_marginLeft="@dimen/right_left_margin"
        android:layout_marginRight="@dimen/right_left_margin"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/access" />

        <TextView
            android:id="@+id/access_text"
            android:layout_width="wrap_content"
            android:textDirection="rtl"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:textSize="@dimen/detail_text_size" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/unselected" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_bottom_margin"
        android:layout_marginBottom="@dimen/top_bottom_margin"
        android:layout_marginLeft="@dimen/right_left_margin"
        android:layout_marginRight="@dimen/right_left_margin"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/languages" />

        <TextView
            android:id="@+id/languages_text"
            android:layout_width="wrap_content"
            android:textDirection="rtl"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:textSize="@dimen/detail_text_size" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/unselected" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/top_bottom_margin"
        android:layout_marginBottom="@dimen/top_bottom_margin"
        android:layout_marginLeft="@dimen/right_left_margin"
        android:layout_marginRight="@dimen/right_left_margin"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/detail_text_size"
            android:text="@string/services" />

        <TextView
            android:id="@+id/services_text"
            android:layout_width="wrap_content"
            android:textDirection="rtl"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:textSize="@dimen/detail_text_size" />

    </RelativeLayout>

</LinearLayout>