<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/branch_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="22dp"
            android:textSize="@dimen/detail_text_size"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/unselected" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/top_bottom_margin"
            android:layout_marginLeft="@dimen/right_left_margin"
            android:layout_marginRight="@dimen/right_left_margin"
            android:layout_marginTop="@dimen/top_bottom_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="@dimen/detail_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textDirection="rtl"
                android:textSize="@dimen/detail_text_size" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/unselected" />

        <Button
            android:id="@+id/direction_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/top_bottom_margin"
            android:layout_marginLeft="@dimen/right_left_margin"
            android:layout_marginRight="@dimen/right_left_margin"
            android:layout_marginTop="@dimen/top_bottom_margin"
            android:background="@drawable/unselected_button"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/direction"
            android:textSize="@dimen/detail_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/unselected" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/top_bottom_margin"
            android:layout_marginLeft="@dimen/right_left_margin"
            android:layout_marginRight="@dimen/right_left_margin"
            android:layout_marginTop="@dimen/top_bottom_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textSize="@dimen/detail_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/distance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:textDirection="anyRtl"
                android:textSize="@dimen/detail_text_size" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/unselected" />

        <FrameLayout
            android:id="@+id/details_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="22dp" />

    </LinearLayout>

</ScrollView>